--- a/index.html
+++ b/index.html
@@ -4,42 +4,51 @@
 	<title>Curriculum Vitae de Tania Vargas</title>
 	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-	<link rel="stylesheet" type="cv2023/css" href="estilos.css" />
+	<link rel="stylesheet" type="text/css" href="css/estilos.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style>
-      body {
+      /*body {
         background-color: black;
       }
 
       h1,h2,li,strong {
         color: orange;
         margin-left: 20px;
-      }
+      }*/
     </style>
 	</head>
 	<body>
-
-		<h1 id="title"></h1>
-
-		<h2>Datos personales</h2>
-		<ul>
-			<li> Nombre completo:  <strong id="nombre"></strong></li>
-			<li> Edad:  <strong id="edad"></strong></li>
-			<li> Genero:  <strong id="genero"></strong></li>
-			<li> Telefono:  <strong id="telefono"></strong></li>
-		</ul>
-
-		<h2>Formación académica</h2>
-		<ul>
-			<li>2007-2014: <strong>Universidad Tecnologica Nacional</strong></li>
-			<li>1997-2002: <strong>Enet N° 1</strong></li>
-			<li>1989-1996:  <strong>Escuela Primaria N° 86</strong></li>
-		</ul>
-
-		<h2>Experiencia laboral</h2>
-		<ul>
-			<li>2020-2022: <strong>En el pony pisador</strong></li>
-			<li>2023-2023: <strong>Profesor en howarts</strong></li>
-		</ul>
+			<h1 id="title"></h1>
+		<div class="container">
+			<!--<img id="imageee" src="${imag}">-->
+			<section >
+				<h2>Datos personales</h2>
+				<ul>
+					<li> Nombre completo:  <strong id="nombre"></strong></li>
+					<li> Edad:  <strong id="edad"></strong></li>
+					<li> Genero:  <strong id="genero"></strong></li>
+					<li> Telefono:  <strong id="telefono"></strong></li>
+					<li> Email:  <strong id="email"></strong></li>
+				</ul>	
+			</section>
+			
+			<section>
+					<h2>Formación académica</h2>
+					<ul>
+						<li>2007-2014: <strong>Universidad Tecnologica Nacional</strong></li>
+						<li>1997-2002: <strong>Enet N° 1</strong></li>
+						<li>1989-1996:  <strong>Escuela Primaria N° 86</strong></li>
+					</ul>	
+			</section>
+			
+			<section>
+					<h2>Experiencia laboral </h2>
+					<ul>
+						<li>2020-2022: <strong>En el pony pisador</strong></li>
+						<li>2023-2023: <strong>Profesor en howarts</strong></li>
+					</ul>	
+			</section>	
+		</div>
 		<script>
 			var dato = datos();
 			function datos()
@@ -61,6 +70,10 @@
 			    document.getElementById("edad").innerHTML = data.results[0].dob.age;
 			    document.getElementById("genero").innerHTML = data.results[0].gender;
 			    document.getElementById("telefono").innerHTML = data.results[0].phone;
+			    document.getElementById("email").innerHTML = data.results[0].email;
+			    //document.getElementById("imag").innerHTML = data.results[0].picture.large;
+			    var imag = data.results[0].picture.large;
+			    console.log(imag);
 			}
 		</script>
 	</body>
